--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "life-coach-vergil",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "twitter": "^1.7.1"
-  }
+	"name": "life-coach-vergil",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "mocha"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"babel": "^6.23.0",
+		"esm": "^3.2.25",
+		"mocha": "^6.2.0",
+		"twit": "^2.2.11",
+		"twitter": "^1.7.1"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.5.5",
+		"@babel/core": "^7.5.5",
+		"@babel/node": "^7.4.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/register": "^7.5.5",
+		"express": "^4.17.1",
+		"fs": "0.0.1-security",
+		"node-cron": "^2.0.3",
+		"webpack": "^4.39.2",
+		"webpack-cli": "^3.3.7"
+	}
 }
