--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@babel/node": "^7.4.5",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/register": "^7.5.5",
+		"edit-json-file": "^1.3.1",
 		"express": "^4.17.1",
 		"fs": "0.0.1-security",
 		"node-cron": "^2.0.3",
