--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"babel": "^6.23.0",
+		"discord.js": "^11.5.1",
 		"esm": "^3.2.25",
 		"mocha": "^6.2.0",
 		"twit": "^2.2.11",
