--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"babel": "^6.23.0",
 		"discord.js": "^11.5.1",
+		"discord.js-poll-embed": "^1.0.1",
 		"esm": "^3.2.25",
 		"mocha": "^6.2.0",
 		"twit": "^2.2.11",
